# DBMS_project/backend/swagger_output.json
@@ -632,11 +632,34 @@
     "/order/getTagDict": {
       "post": {
         "tags": [
-          "Unfinished"
+          "Order"
         ],
         "description": "",
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "取得成功"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "409": {
+            "description": "使用者不存在"
+          }
+        }
       }
     },
     "/order/addNewTag": {
